Adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -7,11 +7,17 @@
   </head>
   <body>
     <h1>Olá, Mundo!</h1>
-    <hr>
+    <hr />
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius consequatur
       non porro voluptatibus iste? Atque, aliquam ipsam et recusandae ut iusto
       quo nisi, ab, fugit sapiente explicabo! Sunt, tempore quam?
+    </p>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est hic quos
+      consequatur voluptas debitis tempora iure saepe esse reprehenderit aliquid
+      minus voluptate architecto cupiditate ratione necessitatibus corrupti eum,
+      cum voluptatibus?
     </p>
   </body>
 </html>
